--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -3,6 +3,41 @@
   <acme-navbar creation-date="main.creationDate"></acme-navbar>
 </div>
 <div class="row">
-  <div table-directive></div>
+
+  <table table-directive>
+    <thead><tr>
+      <th>Number</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Points</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>5</td>
+      <td>Eve</td>
+      <td>Jackson</td>
+      <td>94</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>John</td>
+      <td>Doe</td>
+      <td>80</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Adam</td>
+      <td>Johnson</td>
+      <td>67</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Jill</td>
+      <td>Smith</td>
+      <td>50</td>
+    </tr>
+  </tbody>
+</table>
 </div>
 </div>
