--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -3,78 +3,68 @@
   <acme-navbar creation-date="main.creationDate"></acme-navbar>
 </div>
 <div class="row">
-
   <table table-directive>
-    <thead><tr>
-      <th>Number</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Points</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>5</td>
-      <td>Eve</td>
-      <td>Jackson</td>
-      <td>94</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>John</td>
-      <td>Doe</td>
-      <td>80</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>Adam</td>
-      <td>Johnson</td>
-      <td>67</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-    </tr>
-  </tbody>
+      <thead>
+        <tr>
+          <th class="header">First Name</th>
+          <th class="header">Last Name</th>
+          <th class="header headerSortUp">Age</th>
+          <th class="header">Total</th>
+          <th class="header">Discount</th>
+          <th class="header">Difference</th>
+          <th class="header">Date</th>
+        </tr>
+      </thead>
+      <tbody>        
+        <tr class="odd">
+          <td>Bruce</td>
+          <td>Almighty</td>
+          <td>45</td>
+          <td>153.19</td>
+          <td>44.7%</td>
+          <td>+77</td>
+          <td>Jan 18, 2001 9:12 AM</td>
+        </tr><tr class="even">
+        <td>John</td>
+        <td>Hood</td>
+        <td>33</td>
+        <td>19.99</td>
+        <td>25%</td>
+        <td>+12</td>
+        <td>Dec 10, 2002 5:14 AM</td>
+      </tr><tr class="odd">
+      <td>Peter</td>
+      <td>Parker</td>
+      <td>28</td>
+      <td>9.99</td>
+      <td>20.9%</td>
+      <td>+12.1</td>
+      <td>Jul 6, 2006 8:14 AM</td>
+    </tr><tr class="even">
+    <td>Bruce</td>
+    <td>Evans</td>
+    <td>22</td>
+    <td>13.19</td>
+    <td>11%</td>
+    <td>-100.9</td>
+    <td>Jan 18, 2007 9:12 AM</td>
+  </tr><tr class="odd">
+  <td>Bruce</td>
+  <td>Evans</td>
+  <td>22</td>
+  <td>13.19</td>
+  <td>11%</td>
+  <td>0</td>
+  <td>Jan 18, 2007 9:12 AM</td>
+</tr><tr class="even">
+<td>Clark</td>
+<td>Kent</td>
+<td>18</td>
+<td>15.89</td>
+<td>44%</td>
+<td>-26</td>
+<td>Jan 12, 2003 11:14 AM</td>
+</tr></tbody>
 </table>
 </div>
 </div>
-
