change names of columns

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -17,7 +17,7 @@
       </thead>
       <tbody>        
         <tr class="odd">
-          <td>Bruce</td>
+          <td>Adam</td>
           <td>Almighty</td>
           <td>45</td>
           <td>153.19</td>
@@ -41,7 +41,7 @@
       <td>+12.1</td>
       <td>Jul 6, 2006 8:14 AM</td>
     </tr><tr class="even">
-    <td>Bruce</td>
+    <td>Celina</td>
     <td>Evans</td>
     <td>22</td>
     <td>13.19</td>
