table new date regex added second table for testing

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -3,6 +3,7 @@
   <acme-navbar creation-date="main.creationDate"></acme-navbar>
 </div>
 <div class="row">
+<!-- TABLE 1-->
   <table table-directive>
       <thead>
         <tr>
@@ -66,5 +67,15 @@
 <td>Jan 12, 2003 11:14 AM</td>
 </tr></tbody>
 </table>
+<!-- /TABLE -->
+</div>
+<div class="row">
+<!-- TABLE 2-->
+
+<TABLE table-directive CELLPADDING=6 RULES=GROUPS FRAME=BOX> <THEAD> <TR> <TH>Weekday</TH> <TH>Date</TH> <TH>Manager</TH> <TH>Qty</TH> </TR> </THEAD> <TBODY> <TR> <TD>Mon</TD> <TD>09/11</TD> <TD>Kelsey</TD> <TD>639</TD> </TR> <TR> <TD>Tue</TD> <TD>09/12</TD> <TD>Lindsey</TD> <TD>596</TD> </TR> <TR> <TD>Wed</TD> <TD>09/13</TD> <TD>Randy</TD> <TD>1135</TD> </TR> <TR> <TD>Thu</TD> <TD>09/14</TD> <TD>Susan</TD> <TD>1002</TD> </TR> <TR> <TD>Fri</TD> <TD>09/15</TD> <TD>Randy</TD> <TD>908</TD> </TR> <TR> <TD>Sat</TD> <TD>09/16</TD> <TD>Lindsey</TD> <TD>371</TD> </TR> <TR> <TD>Sun</TD> <TD>09/17</TD> <TD>Susan</TD> <TD>272</TD> </TR> </TBODY></TABLE>
+Read more at http://www.htmlcodetutorial.com/tables/_THEAD.html#S85QD3vwXAkxrrpo.99
+
+<!-- /TABLE -->
+</div>
 </div>
 </div>
